force-app/main/default/objects/Exception_Account__c/Exception_Account__c.object-meta.xml
<CustomObject>
    <label>Exception Account</label>
    <nameField>
        <label>Named Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>