force-app/main/default/objects/Exception_Account__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <description>Master Customer number of the account.</description>
    <label>Master Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>