force-app/main/default/objects/Exception_Account__c/fields/NCR_PS_Manager__c.field-meta.xml
<CustomField>
    <fullName>NCR_PS_Manager__c</fullName>
    <label>NCR PS Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>