force-app/main/default/objects/Exception_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Customer_Number__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>LOB__c</columns>
    <columns>NCR_Sales_Rep__c</columns>
    <columns>NCR_Sales_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>